docker caching, fix django database in local and docker env. Fix models

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     build: .
     ports:
       - "8000:8000"
+    environment:
+      DJANGO_DATABASE: docker
     depends_on:
       postgres:
         condition: service_healthy
