backend-frontend docker routing attempt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.5"
 djangorestframework = "^3.14.0"
 markdown = "^3.4.1"
 django-filter = "^22.1"
+django-cors-headers = "^3.13.0"
 
 
 [build-system]
