--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,11 @@ services:
     expose:
       - 5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -63,8 +67,8 @@ services:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
     depends_on:
-       postgres:
-         condition: service_healthy
+      postgres:
+        condition: service_healthy
     volumes:
       - pgadmin-data:/var/lib/pgadmin'
     profiles:
