--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ psycopg2-binary = "^2.9.5"
 djangorestframework = "^3.14.0"
 markdown = "^3.4.1"
 django-filter = "^22.1"
+python-dotenv = "^0.21.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
