--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ djangorestframework = "^3.14.0"
 markdown = "^3.4.1"
 django-filter = "^22.1"
 python-dotenv = "^0.21.0"
+django-email-log = "^1.2.0"
 
 
 [tool.poetry.group.test.dependencies]
 pytest-django = "^4.5.2"
+pytest-order = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
