--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.0.96",
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "mdi-vue": "^3.0.13",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
