--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ django-filter = "^22.1"
 django-cors-headers = "^3.13.0"
 
 
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.10.0", allow-prereleases = true}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
