--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-cors-headers = "^3.13.0"
 django-extensions = "^3.2.1"
 faker = "^15.3.2"
 pandas = "^1.5.1"
+sqlalchemy = "^1.4.44"
 
 
 [build-system]
