--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "marked": "^4.2.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
