--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-filter = "^22.1"
 django-cors-headers = "^3.13.0"
 python-dotenv = "^0.21.0"
 django-email-log = "^1.2.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
