--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ djangorestframework-simplejwt = "^5.2.2"
 Faker = "^15.3.2"
 pandas = "^1.5.1"
 SQLAlchemy = "^1.4.44"
+django-extensions = "^3.2.1"
 
 
 [build-system]
