--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,15 @@
 [mypy]
 plugins =
+    mypy_django_plugin.main,
     mypy_drf_plugin.main
+python_version = 3.10
+warn_unreachable = True
+warn_no_return = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+
+[mypy.plugins.django-stubs]
+django_settings_module = "backend.test_settings"
+
+[mypy-rest_framework_simplejwt.*]
+ignore_missing_imports = True
