--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,51 @@ pytest-order = "^1.0.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 120
+
+[tool.pylint.MESSAGE_CONTROL]
+disable = [
+    "cyclic-import",
+    "duplicate-code",
+    "invalid-name",
+    "missing-class-docstring",
+    "missing-function-docstring",
+    "missing-module-docstring",
+    "protected-access",
+    "super-init-not-called",
+    "too-few-public-methods",
+    "too-many-ancestors",
+    "too-many-arguments",
+    "too-many-branches",
+    "too-many-instance-attributes",
+    "too-many-lines",
+    "too-many-locals",
+    "too-many-return-statements",
+    "ungrouped-imports",
+    "unnecessary-ellipsis",
+    "imported-auth-user",
+    "abstract-method"  # ze względu na token serializer na razie
+]
+enable = "useless-suppression"
+extension-pkg-allow-list = ["pydantic", "orjson", "picologging"]
+
+[tool.pylint.FORMAT]
+max-line-length = "120"
+
+[tool.pylint.VARIABLES]
+ignored-argument-names = "args|kwargs|_|__"
+
+[tool.pylint.MASTER]
+init-hook='import sys, os; sys.path.append(os.getcwd())'
+load-plugins = [
+    "pylint_django"
+]
+ignore = [
+    "tests",
+    "migrations",
+    "urls.py"
+]
+django-settings-module = "backend.settings"
