--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,13 @@ django-cors-headers = "^3.13.0"
 python-dotenv = "^0.21.0"
 django-email-log = "^1.2.0"
 djangorestframework-simplejwt = "^5.2.2"
-djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
 
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.10.0", allow-prereleases = true}
 mypy = "^0.991"
+djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
+pylint = "^2.15.6"
 
 [tool.poetry.group.test.dependencies]
 pytest-django = "^4.5.2"
