--- a/mypy.ini
+++ b/mypy.ini
@@ -7,6 +7,8 @@ warn_unreachable = True
 warn_no_return = True
 warn_unused_ignores = True
 warn_redundant_casts = True
+strict_optional = False
+# request.user is typed Optional but there is always user even if Anonymous, None is handled in django
 
 [mypy.plugins.django-stubs]
 django_settings_module = "backend.test_settings"
