--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+exclude = "migrations"
 
 [tool.pylint.MESSAGE_CONTROL]
 disable = [
