--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "jw-vue-pagination": "^1.0.3",
     "jwt-decode": "^3.1.2",
     "mdi-vue": "^3.0.13",
     "vue": "^2.6.14",
