--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
+    "@vuejs-community/vue-filter-date-format": "^1.6.3",
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
