--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "markdown-it-vue": "^1.1.7",
     "mdi-vue": "^3.0.13",
